<resources>
    <string name="app_name">Calculator</string>
    <string name="invalid_input">Invalid input</string>
    <string name="berechnen">Berechnen</string>
    <string name="wert_2">Wert 2</string>
    <string name="initial_result">0</string>
    <string name="mr">MR</string>
    <string name="ms">MS</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="substraction">-</string>
    <string name="addition">+</string>
    <string name="wert_1">Wert 1</string>
</resources>