<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Wert1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:text="@string/wert_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="vertical"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Wert1"
        app:layout_constraintStart_toStartOf="@id/guideline"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radioButtonPLus"
            android:layout_height="50dp"
            android:text="@string/addition"
            app:layout_constraintTop_toBottomOf="@+id/editTextText"
            android:enabled="false"
            android:layout_width="50dp"/>

        <RadioButton
            android:id="@+id/radioButtonMinus"
            android:layout_height="50dp"
            android:text="@string/substraction"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextText"
            android:enabled="false"
            android:layout_width="50dp"/>

        <RadioButton
            android:id="@+id/radioButtonMal"
            android:layout_height="50dp"
            android:text="@string/multiplication"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextText"
            android:enabled="false"
            tools:layout_editor_absoluteX="73dp"  android:layout_width="50dp"/>

        <RadioButton
            android:id="@+id/radioButtonDurch"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:text="@string/division"
            app:layout_constraintStart_toStartOf="parent"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@+id/editTextText"  android:layout_width="50dp"/>
    </RadioGroup>

    <EditText
        android:id="@+id/Wert2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/wert_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calculateBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/berechnen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Wert2"
        app:layout_constraintEnd_toStartOf="@id/memoryStoreBtn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/memoryStoreBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/Wert2"
        app:layout_constraintStart_toEndOf="@id/calculateBtn"
        app:layout_constraintEnd_toStartOf="@id/memoryRestoreBtn"
        android:text="@string/ms"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/memoryRestoreBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mr"
        app:layout_constraintStart_toEndOf="@+id/memoryStoreBtn"
        app:layout_constraintTop_toBottomOf="@+id/Wert2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/initial_result"
        android:paddingEnd="5dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/calculateBtn"
        app:layout_constraintTop_toBottomOf="@+id/calculateBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>